# CPPgRPC-Template

./: .gitignore  CMakeLists.txt  Dockerfile  compile_commands.json  docker-compose.yaml  pyproject.toml  run.sh  test.sh
.github/workflows/: BuildDocker.yml  GoogleTest.yaml  extension.yaml  main.yml
protos/: README.md  Service.proto
src/: extension.cc
tests/: CMakeLists.txt
