[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "gRPCNvidia"
version = "0.0.1"
description = "An Extension to make it easier to host and connect to a computer with an Nvidia GPU using gRPC"
author = "Your Name"
author_email = "your.email@example.com"

[tool.cibuildwheel.linux]
# Only build CPython (no PyPy) on x86_64 architecture
build = "cp*x86_64"
before-all = [
    "apt-get update",
    "apt-get install -y --no-install-recommends cmake g++",
]
environment = {
    PATH = "$PATH"
}

[project]
dependencies = []
